# Quanta

./: .gitignore  CMakeLists.txt  LICENSE.txt  QUANTA_STUDIO_DEEP_DIVE.md  QUANTA_STUDIO_MASTER_GUIDE.md  quanta  test_exceptions.qnt  test_loops.qnt  test_top_level.qnt
.github/workflows/: windows_build.yml
Quanta_Release/windows_installer/: make_ico.py
docs/: The_Quanta_Programming_Language.md  generate_pdf.js
include/: quanta.h
quanta-editor/: README.md  index.html  package-lock.json  package.json  postpack.js  test_gemini.js  test_leetcode.js  tsconfig.node.json  untitled-1771994337420  vite.config.ts
quanta-editor/electron/: main.ts  preload.ts  tsconfig.json
quanta-editor/resources/: syntax.qnt
quanta-editor/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
quanta-editor/src/components/: Sidebar.tsx  vscode.css
quanta.dSYM/Contents/: Info.plist
quanta.dSYM/Contents/Resources/Relocations/aarch64/: quanta.yml
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp  quanta_lib.c
tests/: Untitled.qnt  matrix_test.qnt  string_functions_test.qnt
windows_installer/: quanta.iss
